# twoarms_calibration

./: README.md
Universal_Robots_ROS_Driver/ur_robot_driver/config/: left_arm_ur3_controllers.yaml  right_arm_ur3_controllers.yaml
automatic_movement/: CMakeLists.txt  package.xml
automatic_movement/src/: auto_movement.py
calculate_transform/: CMakeLists.txt  package.xml
calculate_transform/src/: calculate.py
easy_handeye/automatic_calibration/: CMakeLists.txt  package.xml
two_putarms/: CMakeLists.txt  package.xml
two_putarms/config/: .left_arm_controller_ur3.yaml.swp  calibration_genowefa.yaml  calibration_kornelia.yaml  rviz_config.rviz  tags.yaml
two_putarms/launch/: auto_calibrate.launch  calibrate.launch  continuous_detection.launch  handeye_calibrate.launch  publish_calibration.launch  test.launch  two_putarms.launch
two_putarms/launch/x/: Network Persistent State  TransportSecurity  storage.json
two_putarms/launch/x/Cache/: 2b55795a12bab761_0  2c5432983c2b4148_0  3949714fb636003b_0  475689b5899f4ee2_0  526a8825caa06dc6_0  6c40bcb8aac9b6e5_0  8e0760d4f4c3e0ef_0  8fb4755cc60a7512_0  a34db8dfb6be80ab_0  a72adaccc5068672_0  b387df8057cbd7b8_0  b4aebb6fae29b169_0  bcf40fed915318fb_0  c9eaf4960362f175_0  cbc42e4c979f69f0_0  d7f1056cb4db1d08_0
two_putarms/launch/x/Cache/index-dir/: the-real-index
two_putarms/launch/x/CachedExtensionVSIXs/: ms-vscode.cmake-tools-1.6.0
two_putarms/rviz/: rviz_test_config.rviz  urdf.rviz
two_putarms/urdf/: two_putarms.urdf.xacro
universal_robot/ur_msgs/: CMakeLists.txt
(+437 files in other folders)
